fixed menu overlap

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -177,7 +177,7 @@ hr
 // --- --- --- HEADER
 header
 	position absolute
-	z-index 3
+	z-index 9
 	top 0
 	right 0
 	left 0
